--- a/cv.html
+++ b/cv.html
@@ -181,7 +181,7 @@
                         <div style="width: 60%;"></div>
                     </div>
                 </div>
-
+            <div class="jaune1">
             </div>
         </div>
 
