--- a/cv.html
+++ b/cv.html
@@ -26,7 +26,7 @@
     <main class="container" id="section">
         <div class="left">
             <div class="jaune">
-                <img src="profil.png" alt="" id="profil">
+                <img src="image/profil.png" alt="" id="profil">
             </div>
 
             <div class="TOUT">
@@ -47,25 +47,25 @@
                 <div class="toure">
                     <div class="contact">
                         <div id="cercle">
-                            <img src="cont.png" alt="" id="img1">
+                            <img src="image/cont.png" alt="" id="img1">
                         </div>
                         <div class="point-group"><span>
                                 <h2 id="cont">CONTACT</h2>
                             </span></div>
                         <div id="cercle1">
-                            <img src="appel.png" alt="" id="img11">
+                            <img src="image/appel.png" alt="" id="img11">
                         </div>
                         <div class="point-group"><span>
                                 <p id="appel">70672215 69179555</p>
                             </span></div>
                         <div id="cercle2">
-                            <img src="navigateur.png" alt="" id="img111">
+                            <img src="image/navigateur.png" alt="" id="img111">
                         </div>
                         <div class="point-group"><span>
                                 <p id="navigateur">berratec1995@gmail.com</p>
                             </span></div>
                         <div id="cercle3">
-                            <img src="gps.png" alt="" id="img1111">
+                            <img src="image/gps.png" alt="" id="img1111">
                         </div>
                         <div class="point-group"><span>
                                 <p id="gps">Kalaban Coro Rue:706 Porte:271</p>
@@ -73,7 +73,7 @@
                     </div>
                     <div class="reference">
                         <div id="cercle4">
-                            <img src="public.png" alt="" id="img2">
+                            <img src="image/public.png" alt="" id="img2">
                         </div>
                         <div class="point-group01"><span>
                                 <h2 id="ref">REFERENCES</h2>
@@ -90,7 +90,7 @@
                     </div>
                     <div class="education">
                         <div id="cercle5">
-                            <img src="casquette.png" alt="" id="img21">
+                            <img src="image/casquette.png" alt="" id="img21">
                         </div>
                         <div class="point-group02"><span>
                                 <h2 id="edu">EDUCATION</h2>
@@ -121,7 +121,7 @@
             </div>
             <div class="about">
                 <div id="cercle6">
-                    <img src="casquette.png" alt="" id="img3">
+                    <img src="image/casquette.png" alt="" id="img3">
                 </div>
                 <div class="point-group2"><span class="point-rec2"></span><span>
                         <h2 id="exp">A<span id="tt">_</span>propos<span id="tt">_</span>de<span id="tt">_</span>moi</h2>
@@ -131,7 +131,7 @@
             </div>
             <div class="experience">
                 <div id="cercle7">
-                    <img src="mallette.png" alt="" id="img31">
+                    <img src="image/mallette.png" alt="" id="img31">
                 </div>
                 <div class="point-group3"><span class="point-rec3"></span><span>
                         <h2 id="per">EXPERIENCES</h2>
@@ -152,7 +152,7 @@
             </div>
             <div class="competence">
                 <div id="cercle8">
-                    <img src="integration.png" alt="" id="img311">
+                    <img src="image/integration.png" alt="" id="img311">
                 </div>
                 <div class="point-group4"><span class="point-rec4"></span><span>
                         <h2 id="comp">COMPETENCE</h2>
