--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body id="bod">
     <header>
         
-        <img src="toure.png" alt="photo de toure">
+        <img src="image/toure.png" alt="photo de toure">
 
     </header>
     <h1 id="titre"><strong>BIENVENUE SUR MA PAGE</strong></h1>
